--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
       <div class="app">
         <div class="top">
           <h1 class="first-heading">Your Balance</h1>
-          <span class="balance-number">4700</span>
+          <span class="balance-number">0</span>
         </div>
 
         <div class="overview">
           <section class="section">
             <h2 class="second-heading">Income</h2>
-            <span class="number number--income">5000</span>
+            <span class="number number--income">0</span>
           </section>
 
           <section class="section">
             <h2 class="second-heading">Expenses</h2>
-            <span class="number number--expenses">300</span>
+            <span class="number number--expenses">0</span>
           </section>
         </div>
 
@@ -59,16 +59,7 @@
       <section class="transactions-section">
         <h2 class="third-heading">Transactions</h2>
         <ul class="transactions">
-          <li class="transaction transaction--income">
-            <span class="transaction__text">Salary</span>
-            <span class="transaction__amount">+5000</span>
-            <button class="transaction__btn">X</button>
-          </li>
-          <li class="transaction transaction--expense">
-            <span class="transaction__text">Groceries</span>
-            <span class="transaction__amount">-300</span>
-            <button class="transaction__btn">X</button>
-          </li>
+          <span class="no_record">No record found</span>
         </ul>
       </section>
     </div>
